# DICOM_STL_COMPRESSOR

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  README.md  core.py  docker-compose.yml  main.py  pyproject.toml  test.py
backend/dicom/: compress.py  decompress.py
backend/dicom/test/: test_compress.py  test_decompress.py
backend/dicom/test/output/: dicom_00013659_019.dcm_lossless_reconstructed.dcm  dicom_00013659_019.dcm_lossy_reconstructed.dcm  dicom_00023075_033.dcm_lossless_reconstructed.dcm  dicom_00023075_033.dcm_lossy_reconstructed.dcm  dicom_00029579_005.dcm_lossless_reconstructed.dcm  dicom_00029579_005.dcm_lossy_reconstructed.dcm
backend/shared/: format.py  metadata.py  parallel.py  pixels.py
backend/stl/: compress.py  decompress.py
frontend/: README.md  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: Footer.tsx  Header.tsx  MetricsPanel.tsx  ProjectOverview.tsx  UploadZone.tsx
frontend/app/lib/: api.ts
